[tool.poetry]
name = "Imagenery"
version = "0.1.0"
description = ""
authors = ["MrArkon <mrarkon@outlook.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
